@@ -59,6 +59,7 @@ The following bugs are resolved with this release:
   [29446] _dlopen now ignores dl_caller argument in static mode
   [29490] alpha: New __brk_call implementation is broken
   [29528] elf: Call __libc_early_init for reused namespaces
+  [29583] Use 64-bit interfaces in gconv_parseconfdir
 
 
 Version 2.35
